--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.1",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-splash-screen": "~0.29.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
